prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/space_sep_name.diag.txt
ERROR: Separate access operator '.' with its following name is forbidden
testData/diagnostics/space_sep_name.nut.txt:10:0

a1.
append(8).  // NOT OK
^-----
extend(6)   // NOT OK


